--- a/tarefas/package.json
+++ b/tarefas/package.json
@@ -11,9 +11,6 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/node": "^7.28.0",
-    "@babel/preset-env": "^7.28.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -22,5 +19,10 @@
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/node": "^7.28.0",
+    "@babel/preset-env": "^7.28.3"
   }
 }
