--- a/tarefa/package.json
+++ b/tarefa/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon api/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ítalo Verçoza",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
